@@ -130,7 +130,7 @@
   </extension>
 </addon>
 
-<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.0.1" provider-name="Anonymous">
+<addon id="plugin.video.xbmctools" name="XBMC Tools" version="1.0.2" provider-name="Anonymous">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
